// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfigurationDetailPanel > should match snapshot with close button 1`] = `
<div>
  <div
    class="border-light border-t bg-white"
  >
    <div
      class="border-b bg-gray-100 px-4 py-2"
    >
      <div
        class="flex items-center justify-between"
      >
        <h3
          class="text-sm font-medium text-gray-900"
        >
          test_feature
        </h3>
        <button
          class="cursor-pointer text-gray-400 hover:text-gray-600 focus:outline-none"
          title="Close details"
        >
          <svg
            class="h-4 w-4"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex h-full flex-col"
    >
      <div
        class="custom-scrollbar flex-1 overflow-y-auto "
      >
        <div
          data-allow-overrides="true"
          data-compact="false"
          data-testid="rule-detail"
        >
          Rule Detail for 
          test_feature
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigurationDetailPanel > should match snapshot with compact mode 1`] = `
<div>
  <div
    class="border-light border-t bg-white"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="custom-scrollbar flex-1 overflow-y-auto max-h-80"
      >
        <div
          data-allow-overrides="true"
          data-compact="true"
          data-testid="rule-detail"
        >
          Rule Detail for 
          test_feature
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigurationDetailPanel > should match snapshot with default props 1`] = `
<div>
  <div
    class="border-light border-t bg-white"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="custom-scrollbar flex-1 overflow-y-auto "
      >
        <div
          data-allow-overrides="true"
          data-compact="false"
          data-testid="rule-detail"
        >
          Rule Detail for 
          test_feature
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigurationDetailPanel > should match snapshot with overrides disabled 1`] = `
<div>
  <div
    class="border-light border-t bg-white"
  >
    <div
      class="flex h-full flex-col"
    >
      <div
        class="custom-scrollbar flex-1 overflow-y-auto "
      >
        <div
          data-allow-overrides="false"
          data-compact="false"
          data-testid="rule-detail"
        >
          Rule Detail for 
          test_feature
        </div>
      </div>
    </div>
  </div>
</div>
`;
